[tool.poetry]
name = "weasley-clock"
version = "0.1.0"
description = ""
authors = ["Keith <hnefatl@gmail.com>"]
readme = "README.md"
#packages = [{include = "weasley-clock"}]

[tool.poetry.dependencies]
python = "^3.10"
aiodns = "3.0.0"
aiohttp = "3.8.3"
aiohttp-client-cache = "0.6.1"
aiosignal = "1.3.1"
appdirs = "1.4.4"
async-timeout = "4.0.2"
attrs = "21.4.0"
black = "22.12.0"
brotli = "1.0.9"
cattrs = "22.2.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
exceptiongroup = "1.1.0"
frozenlist = "1.3.3"
idna = "3.4"
itsdangerous = "2.1.2"
multidict = "6.0.4"
mypy-extensions = "0.4.3"
pathspec = "0.10.3"
platformdirs = "2.6.2"
pycares = "4.3.0"
pycparser = "2.21"
pydantic = "1.9.0"
pygame = "2.1.2"
python-forge = "18.6.0"
requests = "2.28.1"
requests-cache = "0.9.7"
simplejson = "3.18.0"
six = "1.16.0"
tomli = "2.0.1"
typing-extensions = "4.4.0"
url-normalize = "1.4.3"
urllib3 = "1.26.13"
yarl = "1.8.2"
homeassistant-api = {git = "https://github.com/GrandMoff100/HomeAssistantAPI", rev = "49d886f7381da25eb2a7d72d2800d1af5f99d13a"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
